--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:100,200,300,400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Mucho-layout</title>
 </head>
 <body>
-    <header class="header">
-        <div class="header__logo"> <img src="../img/logo.svg" alt="logo"> </div>
-        <p class="header__presentation">
+    <header class="top-navigation">
+        <img class="top-navigation__logo"src="../img/logo.svg" alt="logo">
+        <p class="top-navigation__presentation">
                 <span>We are a strategy, branding, packaging, and graphic design.</span>
                 <span> studio. We create design with meaning from our locations </span>
                 <span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
                 <span>We’d love to hear from you at info@wearemucho.com</span>
         </p>
-        <nav class="header__max-nav">
+        <nav class="top-navigation__max-nav">
             <ul>
                 <li>
                     <a href="#">Work</a>
@@ -43,233 +42,218 @@
                 </li>
             </ul>
         </nav>
-        <nav class="header__min-nav">
-            <div>
-                <img class ="min-nav__icon" src="../img/icon/collapsed-menu.svg" alt="Menu">
-            </div> 
+        <nav class="top-navigation__min-nav">
+            <img class ="min-nav__icon" src="../img/icon/collapsed-menu.svg" alt="Menu">
         </nav>
     </header>
     <nav class="secondary-nav">
-            <div class="secondary-nav__services">
-                <h2 class="services__title">All Services</h2>
-                <img class="services__icon" src="../img/icon/angle_down.svg" alt="Menu">
+            <div class="secondary-nav__row">
+                <p class="row__title">All Services</p>
+                <div class="row__icon">
+                    <img src="../img/icon/angle_down.svg" alt="Menu">
+                </div>
             </div>
-            <div class="secondary-nav__industries">
-                <h2>All Industries</h2>
-                <img src="../img/icon/angle_down.svg" alt="Menu">
+            <div class="secondary-nav__row">
+                <p class="row__title">All Industries</p>
+                <div class="row__icon">
+                    <img  src="../img/icon/angle_down.svg" alt="Menu">
+                </div>
             </div>
         </nav>
 
     <main class="mosaic">
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x750" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x752" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x752" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x753" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x753" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x754" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x754" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x755" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x755" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x756" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x756" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x757" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x757" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x758" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x758" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x759" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x759" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x760" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x760" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x761" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x761" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x762" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x762" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x763" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x763" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x764" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x764" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x765" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x765" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x766" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x766" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
-            <figure>
-                <img src="http://source.unsplash.com/random/1000x767" alt="img_00.jpg">
-            </figure>
-            <p class="mosaic__text">
-                This is an example of text mosaic tile.
-            </p>
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1000x767" alt="img_00.jpg">
         </div>
         <article class="mosaic__article">
             <h3>@wearemucho</h3>
             <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:</p>
-        </figure>
+        </article>
         
         <article class="mosaic__article">
                 <h3>Talking & Teaching</h3>
                 <p>PostGráfica is a masters course developed by Mucho on Strategic Thinking, Graphic Design and Creative Business. For more info: postgrafica.idepbarcelona.com</p>
-        </figure>
+        </article>
         <article class="mosaic__article">
                 <h3>About</h3>
                 <p>We create design with meaning. Great design speaks to your head, and your heart. It makes you feel different, and think differently. 
                 </p>
-        </figure>    
+        </article> 
     </main>
 
-    <footer>
+    <footer class="foot_info">
         <div class="contact">
-            <p class="contact__business">
-                <span>We look forward to hearing from you.</span>
-                <span>For new business, please contact the closest office directly.</span>
-                <span>For general enquiries, please email us: info@wearemucho.com</span>
+            <p class="contact-business">
+                <span>We look forward to hearing from you. For new </span>
+                <span>business, please contact the closest office directly.</span>
+                <span>For general enquiries, please email us:</span>
+                <span><a href="">@wearemucho.com</a></span>
             </p>
-            <div class= "Contact">
-                <address class="contact__card">
-                    <span class='card__city'>Barcelona</span>
-                    <span class='card__phone'>+34 123 456 789</span>
-                    <span class='card__mail'> <a href="mailto:#">barcelona@...com</a></span>
-                    <span class='card__adresss'>Morales, 27k<br/>08xxx BCN</span>
+            <div class= "contact-set">
+                <address class="contact-card">
+                    <span class='contact-card__city'>Barcelona</span>
+                    <span class='contact-card__phone'>+34 123 456 789</span>
+                    <span class='contact-card__mail'> <a href="mailto:#">barcelona@...com</a></span>
+                    <span class='contact-card__adresss'>Morales, 27k<br/>08xxx BCN</span>
                 </address>
-                <address class="contact__card">
-                    <span class='card__city'>San Francisco</span>
-                    <span class='card__phone'>+1 456 345 6478</span>
-                    <span class='card__mail'> <a href="mailto:#">sanfranciso@...com</a></span>
-                    <span class='card__adresss'>466 Geary Street<br/>San Francisco, CA, 94xxx</span>
+                <address class="contact-card">
+                    <span class='contact-card__city'>San Francisco</span>
+                    <span class='contact-card__phone'>+1 456 345 6478</span>
+                    <span class='contact-card__mail'> <a href="mailto:#">sanfranciso@...com</a></span>
+                    <span class='contact-card__adresss'>466 Geary Street<br/>San Francisco, CA, 94xxx</span>
                 </address>
-                <address class="contact__card">
-                    <span class='card__city'>Paris</span>
-                    <span class='card__phone'>+33 (0)1 78 58 20</span>
-                    <span class='card__mail'> <a href="mailto:#">paris@...com</a></span>
-                    <span class='card__adresss'>80 rue Taitbout<br/> 75xxx Square d'Orléans</span>
+                <address class="contact-card">
+                    <span class='contact-card__city'>Paris</span>
+                    <span class='contact-card__phone'>+33 (0)1 73 71 58 20</span>
+                    <span class='contact-card__mail'> <a href="mailto:#">paris@...com</a></span>
+                    <span class='contact-card__adresss'>80 Rue Taitbout<br/> 75xxx Square d'Orléans <br> 75xxx Paris</span>
                 </address>
-                <address class="contact__card">
-                    <span class='card__city'>New York</span>
-                    <span class='card__phone'>+1 923 444 3458</span>
-                    <span class='card__mail'> <a href="mailto:#">newyork@...com</a></span>
-                    <span class='card__adresss'>37 Greenpoint Ave<br/>Brooklyn, 11xxx</span>
+                <address class="contact-card">
+                    <span class='contact-card__city'>New York</span>
+                    <span class='contact-card__phone'>+1 923 444 3458</span>
+                    <span class='contact-card__mail'> <a href="mailto:#">newyork@...com</a></span>
+                    <span class='contact-card__adresss'>37 Greenpoint Ave<br/>Brooklyn, NY  11xxx</span>
                 </address>
             </div>
             
         </div>
         <div class='footer-info'>
-            <div class="footer-info__terms">
-                <p>Copyright ©</p>
-                <a href="#">Terms</a>
+            <div class="info-block">
+                <p class="info-block__title">Copyright © 2019</p>
+                <a class= "info-block__link" href="#">Terms</a>
             </div>
-            <div class="footer-info__social">
-                <p>Subscribe</p>
-                <div class="social__icon-set">
-                    <a href="#"> <img src="../img/icon/instagram.svg" alt="Instagram"></a>
+            <div class="info-block info-social">
+                <p class="info-block__title">Subscribe</p>
+                 <div class="icon-set">
+                    <a href="#"><img src="../img/icon/instagram.svg" alt="Instagram"></a>
                     <a href="#"> <img src="../img/icon/facebook.svg" alt="Facebook"></a>
                     <a href="#"> <img src="../img/icon/linkedin.svg" alt="Linkedin"></a>
                     <a href="#"> <img src="../img/icon/behance.svg" alt="Behance"></a>
                     <a href="#"> <img src="../img/icon/twitter.svg" alt="Twitter"></a>
-                </div>
+                </div> 
             </div>
         </div>
     </footer>
