--- a/staff/juan-bovo/mucho-layout/index.html
+++ b/staff/juan-bovo/mucho-layout/index.html
@@ -8,192 +8,192 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
 </head>
-<body class="website--layout">
+<body class="website-layout">
     <header>
-        <div class="header--separator">
-        <h1 class="main--title header--title">Mucho</h1>
-        <p class="header--paragraph list--item__color">We are a strategy, branding, packaging, and graphic design
+        <div class="header-separator">
+        <h1 class="main-title header-title">Mucho</h1>
+        <p class="header-paragraph list-item--color">We are a strategy, branding, packaging, and graphic design
             studio. We create design with meaning from our locations
             in Barcelona, Paris, San Francisco, New York and Sydney.</p>
-        <nav class="navigation--panel">
-            <p class="navigation--panel__hamburguer"><i class="fas fa-bars"></i></p>
-            <ul class="navigation--panel__container">
-                <li><a href="#" class="navigation--panel__item list--item__color">Work</a></li>
-                <li><a href="#" class="navigation--panel__item list--item__color">Strategy</a></li>
-                <li><a href="#" class="navigation--panel__item list--item__color">Sharing</a></li>
-                <li><a href="#" class="navigation--panel__item list--item__color">About</a></li>
-                <li><a href="#" class="navigation--panel__item list--item__color">Jobs</a></li>
-                <li><a href="#" class="navigation--panel__item list--item__color">Shop</a></li>
-                <li><a href="#" class="navigation--panel__item list--item__color">Contact</a></li>
+        <nav class="navigation-panel">
+            <p class="navigation-panel__hamburguer-menu"><i class="fas fa-bars"></i></p>
+            <ul class="navigation-panel__container">
+                <li><a href="#" class="navigation-panel__item list-item--color">Work</a></li>
+                <li><a href="#" class="navigation-panel__item list-item--color">Strategy</a></li>
+                <li><a href="#" class="navigation-panel__item list-item--color">Sharing</a></li>
+                <li><a href="#" class="navigation-panel__item list-item--color">About</a></li>
+                <li><a href="#" class="navigation-panel__item list-item--color">Jobs</a></li>
+                <li><a href="#" class="navigation-panel__item list-item--color">Shop</a></li>
+                <li><a href="#" class="navigation-panel__item list-item--color">Contact</a></li>
             </ul>
         </nav>
         </div>
-        <div id="navigators">
+        <div class="navigators">
         <section class="navigation">
-        <h3 class="navigation__title list--item__color">All Services &rsaquo;</h3>
-        <ul class="dropdown__menu">
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
+        <h3 class="navigation-title list-item--color">All Services &rsaquo;</h3>
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#" class="dropdown-menu__item">Item...</a></li>
         </ul>
         </section>
         <section class="navigation">
-        <h3 class="navigation__title list--item__color">All Industries &rsaquo;</h3>
-        <ul class="dropdown__menu">
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
+        <h3 class="navigation-title list-item--color">All Industries &rsaquo;</h3>
+        <ul class="dropdown-menu">
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
+            <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
         </ul>
         </section>
         </div>
     </header>
-    <main class="mosaic--grid">
+    <main class="mosaic-grid">
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/animals?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/arch?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/nature?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div id="big1" class="project-div project-div__big">
             <div><a href="#"><img src="http://placeimg.com/640/480/people?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/tech?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/grayscale?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div id="big2" class="project-div project-div__big">
             <div><a href="#"><img src="http://placeimg.com/640/480/sepia?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/animals?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/arch?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div id="big3" class="project-div project-div__big">
             <div><a href="#"><img src="http://placeimg.com/640/480/nature?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/people?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h2>
+            <h3 class="project-title">Project</h2>
             <p>Project's designer-like pretentious description.</p>
         </div>
         <div class="project-div">
             <div><a href="#"><img src="http://placeimg.com/640/480/tech?t=1562877254013" alt=""></a></div>
-            <h3 class="project--title">Project</h3>
+            <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
     </main>
-    <section class="about__section">
+    <section class="about-section">
         <div class="project-div project-description">
-            <h3 class="project--title header--title">Project</h3>
+            <h3 class="project-title header-title">Project</h3>
             <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:… t.co/dcF3a5b708</p>
         </div>
         <div class="project-div project-description">
-            <h3 class="project--title header--title">Project</h3>
+            <h3 class="project-title header-title">Project</h3>
             <p>PostGráfica is a masters course developed by Mucho on Strategic Thinking, Graphic Design and Creative Business. For more info: postgrafica.idepbarcelona.com</p>
         </div>
         <div class="project-div project-description">
-            <h3 class="project--title header--title">Project</h3>
+            <h3 class="project-title header-title">Project</h3>
             <p>We create design with meaning. Great design speaks to your head, and your heart. It makes you feel different, and think differently.</p>
         </div>
     </section>
-    <footer>
-        <div class="approach--paragraph">
+    <footer class="footer">
+        <div class="approach-paragraph">
         <p>We look forward to hearing from you.</p>
         <p>For new business, please contact the closest office directly.</p>
         <p>For general enquiries, please email us: <a href="#">info@wearemucho.com</a></p>
         </div>
-        <div class="addresses--wrapper">
-            <div class="address--location">
-            <h5 class="header--title">Barcelona</h5>
-            <p class="contact--data">+34 93 481 40 89<br>
+        <div class="addresses-wrapper">
+            <div class="address-location">
+            <h5 class="header-title">Barcelona</h5>
+            <p class="contact-data">+34 93 481 40 89<br>
             barcelona@wearemucho.com<br>
             <br>
             Morales, 27K<br>
             08029 Barcelona<br></p>
             </div>
-            <div class="address--location">
-            <h5 class="header--title">San Francisco</h5>
-            <p class="contact--data">+1 415 546 1399<br>
+            <div class="address-location">
+            <h5 class="header-title">San Francisco</h5>
+            <p class="contact-data">+1 415 546 1399<br>
             sanfrancisco@wearemucho.com<br>
             <br>
             466 Geary Street, Suite 500<br>
             San Francisco, CA 94102</p>
             </div>
-            <div class="address--location">
-            <h5 class="header--title">Paris</h5>
-            <p class="contact--data">+34 93 481 40 89<br>
+            <div class="address-location">
+            <h5 class="header-title">Paris</h5>
+            <p class="contact-data">+34 93 481 40 89<br>
             paris@wearemucho.com<br>
             <br>
             80 rue Taitbout<br>
             75009 Paris<br></p>
             </div>
-            <div class="address--location">
-            <h5 class="header--title">New York</h5>
-            <p class="contact--data">+34 93 481 40 89<br>
+            <div class="address-location">
+            <h5 class="header-title">New York</h5>
+            <p class="contact-data">+34 93 481 40 89<br>
             newyork@wearemucho.com<br>
             <br>
             37 Greenpoint Ave, Suite 219<br>
             Brooklyn, NY 11222<br></p>
             </div>
         </div>
-        <div class="contact--wrapper">
-        <div class="social--media list--item__color">
+        <div class="contact-wrapper">
+        <div class="social-media list-item--color">
             <p>Copyright © 2019</p>
         </div>
-        <div class="social--media list--item__color">
+        <div class="social-media list-item--color">
             <ul>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-facebook-square"></i>
