--- a/staff/christian-haag/initial-app/index.html
+++ b/staff/christian-haag/initial-app/index.html
@@ -5,65 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>initial-app</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Initial App</h1>
+    <main>
+        <h1>Initial App</h1>
+        <!-- initial panel -->
+        <section class="panel panel--show">
+            <div class="link"></span><a href="">Register</a> or <a href="">Login</a></div>
+        </section>
 
-    <section class="panel initial-panel panel--show">
-        <a href="">Register</a> or <a href="">Login</a>
-    </section>
+        <!-- register panel -->
+        <section class="panel panel--hide">
+            <form>
+                <label for="name">Name*</label>
+                <input type="text" id="name" required>
+                <label for="surname">Surname*</label>
+                <input type="text" id="surname" required>
+                <label for="email">E-mail*</label>
+                <input type="email" id="email" required>
+                <label for="password">Password*</label>
+                <input type="password" id="password" required>
+                <button type="submit">Register</button>
+            </form>
+            <a href="">back</a>
+        </section>
 
-    <section class="panel panel--hide">
-        <form>
-            <label for="name">
-                <input id="name" class="container-register__input" type="text" placeholder="Name" required>
-            </label>
+        <!-- register success panel -->
+        <section class="panel panel--hide">
+            <p class="text"> Ok, registered succeeded, you can now proceed to <a href="">login</a>.</p>
+        </section>
 
-            <label for="surename">
-                <input id="surename" class="container-register__input" type="text" placeholder="Surename" required>
-            </label>
+        <!-- login panel -->
+        <section class="panel panel--hide">
+            <form>
+                <label for="email">E-mail*</label>
+                <input type="email" id="email" required>
+                <label for="password">Password*</label>
+                <input type="password" id="password" required>
+                <button type="submit">Login</button>
+            </form>
+        </section>
 
-            <label for="email">
-                <input id="email" class="container-register__input" type="email" placeholder="e-mail" required>
-            </label>
-
-            <label for="password">
-                <input id="password" class="container-register__input" type="text" placeholder="Password" required>
-            </label>
-
-            <button type="submit" onclick="InitApp.register();">Register</button>
-        </form>
-        <a href="">back</a>
-    </section>
-
-
-    <section class="panel panel--hide">
-        <form>
-            <label for="email">
-                <input id="email" class="container-register__input" type="email" placeholder="Name" required>
-            </label>
-
-            <label for="password">
-                <input id="password" class="container-register__input" type="text" placeholder="Name" required>
-            </label>
-
-            <button type="submit" onclick="InitApp.login();">Register</button>
-        </form>
-    </section>
-
-
-    <section class="panel--hide">
-        Ok, registration succeed, you can now procced to, <a href="">login</a>
-    </section>
-
-
-    <section class="panel panel--hide">
-        <h2 class="main-page__title">Welome!</h2>
-    </section>
+        <!-- welcome panel -->
+        <section class="panel panel--hide">
+            <h2>Welcome!</h2>
+            <img src="https://media.giphy.com/media/JQ3IMbDi5Jkw8/giphy.gif" alt="dancing dog">
+        </section>
+    </main>
 
     <script src="main.js"></script>
 </body>
